--- a/index.html
+++ b/index.html
@@ -110,7 +110,11 @@
             </div>
         </div>
         <!-- Carousel End -->
-
+<center>
+<P><a href="https://ecedtechdigitalacademy.github.io/mock1/">MOCK 1</a></P>
+<P><a href="https://ecedtechdigitalacademy.github.io/exams/">PAST QUESTION 1</a></P>
+<P><a href="https://ecedtechdigitalacademy.github.io/obj/">COMPUTING Q&A</a></P>
+</center>
 
         <!-- Facilities Start -->
         <div class="container-xxl py-5">
