--- a/index.html
+++ b/index.html
@@ -114,6 +114,8 @@
 <P><a href="https://ecedtechdigitalacademy.github.io/mock1/">MOCK 1</a></P>
 <P><a href="https://ecedtechdigitalacademy.github.io/exams/">PAST QUESTION 1</a></P>
 <P><a href="https://ecedtechdigitalacademy.github.io/obj/">COMPUTING Q&A</a></P>
+<P><a href="https://ecedtechdigitalacademy.github.io/dmeng/">DISTRICT MOCK ENGLISH</a></P>
+<P><a href="https://ecedtechdigitalacademy.github.io/dmrme/">DISTRICT MOCK RME</a></P>
 </center>
 
         <!-- Facilities Start -->
